WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106896
[BlackBerry] LayerRenderingResults doesn't need to maintain the hole punch rect
https://bugs.webkit.org/show_bug.cgi?id=106896
Summary
[BlackBerry] LayerRenderingResults doesn't need to maintain the hole punch rect
Charles Wei
Reported
2013-01-15 05:59:43 PST
The LayerRenderingResults doesn't need to maintain the hole punch rect, it's never used anyway. The hole punch rect is maintained in the LayerData. Internal tracking No. 272155
Attachments
Patch
(3.48 KB, patch)
2013-01-15 18:34 PST
,
Charles Wei
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2013-01-15 18:34:08 PST
Created
attachment 182895
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-15 19:54:59 PST
Comment on
attachment 182895
[details]
Patch Clearing flags on attachment: 182895 Committed
r139828
: <
http://trac.webkit.org/changeset/139828
>
WebKit Review Bot
Comment 3
2013-01-15 19:55:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug