[BlackBerry]  LayerRenderingResults doesn't need to maintain the hole punch rect https://bugs.webkit.org/show_bug.cgi?id=106896

Reviewed by George Staikos.
Internally reviewed by Arvid Nilsson and John Griggs.

No new tests,clean up code which is not used anymore.

* platform/graphics/blackberry/LayerRenderer.cpp:
(WebCore::LayerRenderer::drawHolePunchRect):
* platform/graphics/blackberry/LayerRenderer.h:
(LayerRenderingResults):


Canonical link: https://commits.webkit.org/125210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139828 268f45cc-cd09-0410-ab3c-d52691b4dbfc